--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>TranslateBridge</title><link rel="stylesheet" href="css/style.css"></head><body><h1>TranslateBridge Homepage</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TranslateBridge</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <img src="logo.png" alt="TranslateBridge Logo" class="logo">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="industries.html">Industries</a>
+            <a href="languages.html">Languages</a>
+            <a href="work-with-us.html">Work With Us</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <img src="hero.jpg" alt="Professional Translation" class="hero-img">
+        <h1>Connecting Worlds Through Translation</h1>
+        <p>Your trusted partner for multilingual communication.</p>
+    </section>
+
+    <section class="clients">
+        <h2>Our Clients</h2>
+        <img src="client1.png" alt="Client Logo" class="client-logo">
+    </section>
+
+    <footer>
+        <p>© 2025 TranslateBridge. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
